tests/invalid/StaticVar_Invalid_7.whiley
final int x = [x][0]